feat: bypass GitHub API 1000-run cap with sliding time windows
GitHub's REST API returns at most 1000 results per search query.
When a repo has more matching runs, fetchRuns now slides the time
window backwards (using the oldest run's timestamp minus 1 second
as the upper bound) and issues additional queries, deduplicating
results by run ID across batches.

Other changes:
- Replace custom spinner with ora for progress reporting
- Show fetched/total count in spinner during search
- Use full ISO timestamps in `created` API filter (not date-only)
- Scan all runs for actual oldest timestamp instead of assuming
  sort order

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "prepublishOnly": "npm test && npm run build"
   },
   "dependencies": {
-    "commander": "^14.0.3"
+    "commander": "^14.0.3",
+    "ora": "^9.3.0"
   },
   "devDependencies": {
     "@types/node": "^25.2.3",
